# lo-pptx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
lo/: __init__.py  __main__.py
lo/commands/: __init__.py  diff.py  export.py  init.py  reload.py  shape.py
lo/core/: __init__.py  config.py  pptx_ops.py  shape_finder.py
skill/: SKILL.md
skill/references/: lo-commands.md  workflow-principles.md
