[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lo-pptx"
version = "0.1.0"
description = "Agent-friendly PPTX surgical editor via snapshot diff"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.21",
]

[project.scripts]
lo = "lo.__main__:main"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["lo*"]
